# espai

./: README.md  pyproject.toml
espai/: cli.py  gemini_client.py
spai/: cli.py  gemini_client.py  models.py  search_client.py
